chore: data base settings, added participant entity

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_HOST=localhost
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=codequest_db
-DB_SCHEMA=proyecto
+DB_SCHEMA=public
 DB_PORT=5432
 
 DB_SCHEMA_USUARIOS=usuarios
