feat: add discord logic

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,8 @@ PORT=3000
 HOST_API=http://localhost:3000/api
 
 JWT_SECRET=Est3EsMISE3Dsecreto32s
+DISCORD_CLIENT_ID=343242123123
+DISCORD_CLIENT_SECRET=Auuuiquhi92981
+DISCORD_REDIRECT_URL=http://localhost:3000/api/discord
+SERVER_DISCORD_ID=3781234117831727398
+FRONTEND_URL=http://localhost:5173
